@@ -4,13 +4,13 @@ import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
 
 import seedu.address.commons.exceptions.IllegalValueException;
 import seedu.address.commons.util.DateUtil;
+import seedu.address.model.appointment.Appointment;
 import seedu.address.model.person.Address;
 import seedu.address.model.person.DateOfBirth;
 import seedu.address.model.person.Email;
@@ -19,6 +19,7 @@ import seedu.address.model.person.Name;
 import seedu.address.model.person.Nric;
 import seedu.address.model.person.Person;
 import seedu.address.model.person.Phone;
+import seedu.address.model.person.Priority;
 import seedu.address.model.tag.Tag;
 
 /**
@@ -36,6 +37,8 @@ class JsonAdaptedPerson {
     private final String gender;
     private final String nric;
     private final List<JsonAdaptedTag> tags = new ArrayList<>();
+    private final String priority;
+    private final List<JsonAdaptedAppointment> appointments = new ArrayList<>();
 
     /**
      * Constructs a {@code JsonAdaptedPerson} with the given person details.
@@ -46,16 +49,22 @@ class JsonAdaptedPerson {
             @JsonProperty("dateOfBirth") String dateOfBirth,
             @JsonProperty("gender") String gender,
             @JsonProperty("nric") String nric,
-            @JsonProperty("tags") List<JsonAdaptedTag> tags) {
+            @JsonProperty("tags") List<JsonAdaptedTag> tags,
+            @JsonProperty("priority") String priority,
+            @JsonProperty("appointments") List<JsonAdaptedAppointment> appointments) {
         this.name = name;
         this.phone = phone;
         this.email = email;
         this.address = address;
+        this.priority = priority;
         this.gender = gender;
         this.dateOfBirth = dateOfBirth;
         this.nric = nric;
         if (tags != null) {
             this.tags.addAll(tags);
+        }
+        if (appointments != null) {
+            this.appointments.addAll(appointments);
         }
     }
 
@@ -70,9 +79,15 @@ class JsonAdaptedPerson {
         dateOfBirth = source.getDateOfBirth().value;
         gender = source.getGender().value;
         nric = source.getNric().value;
-        tags.addAll(source.getTags().stream()
-                .map(JsonAdaptedTag::new)
-                .collect(Collectors.toList()));
+        priority = source.getPriority().priority;
+        tags.addAll(source.getTags()
+                          .stream()
+                          .map(JsonAdaptedTag::new)
+                          .toList());
+        appointments.addAll(source.getAppointments()
+                                  .stream()
+                                  .map(JsonAdaptedAppointment::new)
+                                  .toList());
     }
 
     /**
@@ -82,6 +97,12 @@ class JsonAdaptedPerson {
      */
     public Person toModelType() throws IllegalValueException {
         final List<Tag> personTags = new ArrayList<>();
+        final List<Appointment> personAppointments = new ArrayList<>();
+
+        for (JsonAdaptedAppointment appointment : appointments) {
+            personAppointments.add(appointment.toModelType());
+        }
+
         for (JsonAdaptedTag tag : tags) {
             personTags.add(tag.toModelType());
         }
@@ -147,8 +168,15 @@ class JsonAdaptedPerson {
         final Nric modelNric = new Nric(nric);
 
         final Set<Tag> modelTags = new HashSet<>(personTags);
+        if (priority == null) {
+            throw new IllegalValueException(String.format(MISSING_FIELD_MESSAGE_FORMAT,
+                    Priority.class.getSimpleName()));
+        }
+        final Priority modelPriority = new Priority(priority);
+        final Set<Appointment> modelAppointments = new HashSet<>(personAppointments);
         return new Person(modelName, modelPhone, modelEmail, modelNric, modelAddress, modelDateOfBirth,
-                modelGender, modelTags);
+                modelGender, modelTags, modelPriority, modelAppointments);
+
     }
 
 }
